--- a/movie_recommend_system.ipynb
+++ b/movie_recommend_system.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "id": "5d7a902e-6bca-488a-925f-678a0ab6b8f3",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "      <th>0</th>\n",
        "      <td>19995</td>\n",
        "      <td>Avatar</td>\n",
-       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>[In, the, 22nd, century,, a, paraplegic, Marin...</td>\n",
        "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
        "      <td>[culture clash, future, space war, space colon...</td>\n",
        "      <td>[James Cameron]</td>\n",
@@ -739,7 +739,7 @@
        "      <th>1</th>\n",
        "      <td>285</td>\n",
        "      <td>Pirates of the Caribbean: At World's End</td>\n",
-       "      <td>Captain Barbossa, long believed to be dead, ha...</td>\n",
+       "      <td>[Captain, Barbossa,, long, believed, to, be, d...</td>\n",
        "      <td>[Adventure, Fantasy, Action]</td>\n",
        "      <td>[ocean, drug abuse, exotic island, east india ...</td>\n",
        "      <td>[Gore Verbinski]</td>\n",
@@ -749,7 +749,7 @@
        "      <th>2</th>\n",
        "      <td>206647</td>\n",
        "      <td>Spectre</td>\n",
-       "      <td>A cryptic message from Bond’s past sends him o...</td>\n",
+       "      <td>[A, cryptic, message, from, Bond’s, past, send...</td>\n",
        "      <td>[Action, Adventure, Crime]</td>\n",
        "      <td>[spy, based on novel, secret agent, sequel, mi...</td>\n",
        "      <td>[Sam Mendes]</td>\n",
@@ -759,7 +759,7 @@
        "      <th>3</th>\n",
        "      <td>49026</td>\n",
        "      <td>The Dark Knight Rises</td>\n",
-       "      <td>Following the death of District Attorney Harve...</td>\n",
+       "      <td>[Following, the, death, of, District, Attorney...</td>\n",
        "      <td>[Action, Crime, Drama, Thriller]</td>\n",
        "      <td>[dc comics, crime fighter, terrorist, secret i...</td>\n",
        "      <td>[Christopher Nolan]</td>\n",
@@ -769,7 +769,7 @@
        "      <th>4</th>\n",
        "      <td>49529</td>\n",
        "      <td>John Carter</td>\n",
-       "      <td>John Carter is a war-weary, former military ca...</td>\n",
+       "      <td>[John, Carter, is, a, war-weary,, former, mili...</td>\n",
        "      <td>[Action, Adventure, Science Fiction]</td>\n",
        "      <td>[based on novel, mars, medallion, space travel...</td>\n",
        "      <td>[Andrew Stanton]</td>\n",
@@ -788,11 +788,11 @@
        "4     49529                               John Carter   \n",
        "\n",
        "                                            overview  \\\n",
-       "0  In the 22nd century, a paraplegic Marine is di...   \n",
-       "1  Captain Barbossa, long believed to be dead, ha...   \n",
-       "2  A cryptic message from Bond’s past sends him o...   \n",
-       "3  Following the death of District Attorney Harve...   \n",
-       "4  John Carter is a war-weary, former military ca...   \n",
+       "0  [In, the, 22nd, century,, a, paraplegic, Marin...   \n",
+       "1  [Captain, Barbossa,, long, believed, to, be, d...   \n",
+       "2  [A, cryptic, message, from, Bond’s, past, send...   \n",
+       "3  [Following, the, death, of, District, Attorney...   \n",
+       "4  [John, Carter, is, a, war-weary,, former, mili...   \n",
        "\n",
        "                                          genres  \\\n",
        "0  [Action, Adventure, Fantasy, Science Fiction]   \n",
@@ -816,7 +816,7 @@
        "4    [Taylor Kitsch, Lynn Collins, Samantha Morton]  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,8 +827,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "3d62667f-0b16-435e-89f9-9483a8e6324d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies['overview']=movies['overview'].apply(lambda x:x.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f129dbdb-8f7a-496b-a958-bce049e203e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies['genres']=movies['genres'].apply(lambda x:[i.replace(\" \",\"\") for i in x])\n",
+    "movies['keywords']=movies['keywords'].apply(lambda x:[i.replace(\" \",\"\") for i in x])\n",
+    "movies['cast']=movies['cast'].apply(lambda x:[i.replace(\" \",\"\") for i in x])\n",
+    "movies['crew']=movies['crew'].apply(lambda x:[i.replace(\" \",\"\") for i in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "e43a4a79-ba0a-454e-978d-5ab58fed2774",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>crew</th>\n",
+       "      <th>cast</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>[In, the, 22nd, century,, a, paraplegic, Marin...</td>\n",
+       "      <td>[Action, Adventure, Fantasy, ScienceFiction]</td>\n",
+       "      <td>[cultureclash, future, spacewar, spacecolony, ...</td>\n",
+       "      <td>[JamesCameron]</td>\n",
+       "      <td>[SamWorthington, ZoeSaldana, SigourneyWeaver]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>285</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>[Captain, Barbossa,, long, believed, to, be, d...</td>\n",
+       "      <td>[Adventure, Fantasy, Action]</td>\n",
+       "      <td>[ocean, drugabuse, exoticisland, eastindiatrad...</td>\n",
+       "      <td>[GoreVerbinski]</td>\n",
+       "      <td>[JohnnyDepp, OrlandoBloom, KeiraKnightley]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id                                     title  \\\n",
+       "0     19995                                    Avatar   \n",
+       "1       285  Pirates of the Caribbean: At World's End   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  [In, the, 22nd, century,, a, paraplegic, Marin...   \n",
+       "1  [Captain, Barbossa,, long, believed, to, be, d...   \n",
+       "\n",
+       "                                         genres  \\\n",
+       "0  [Action, Adventure, Fantasy, ScienceFiction]   \n",
+       "1                  [Adventure, Fantasy, Action]   \n",
+       "\n",
+       "                                            keywords             crew  \\\n",
+       "0  [cultureclash, future, spacewar, spacecolony, ...   [JamesCameron]   \n",
+       "1  [ocean, drugabuse, exoticisland, eastindiatrad...  [GoreVerbinski]   \n",
+       "\n",
+       "                                            cast  \n",
+       "0  [SamWorthington, ZoeSaldana, SigourneyWeaver]  \n",
+       "1     [JohnnyDepp, OrlandoBloom, KeiraKnightley]  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a37aeb77-d374-4574-8cf0-2fbc2a88b51b",
    "metadata": {},
    "outputs": [],
    "source": []
