--- a/movie_recommend_system.ipynb
+++ b/movie_recommend_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 135,
    "id": "0ca3e4f8-11c7-4822-b252-518a8a94f3f2",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 136,
    "id": "96aa4090-a4a2-47c8-a36d-784b50ae846a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 137,
    "id": "6c7e5343-3b4c-4a48-bc71-cad66ed9a1cc",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "0  Enter the World of Pandora.  Avatar           7.2       11800  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 138,
    "id": "a045d379-4eaf-4721-8955-f7240e026dff",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 139,
    "id": "8d848527-5107-4f38-bd44-68108eb52429",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 140,
    "id": "a9d7b30a-a2fb-4967-b203-849c29919d8e",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "(4809, 23)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 141,
    "id": "4a2626e9-f139-4323-99a1-afc5c6b7fd1d",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 142,
    "id": "851946f6-6e37-45d0-939a-89d0a117c03b",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 143,
    "id": "7cf03ba4-1481-47e3-8c9d-bd870286bff4",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "0  [{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 144,
    "id": "f6fe1514-c284-474b-859a-4e784cf9307f",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 145,
    "id": "3b9c5f9a-b749-4a9f-b234-82510c878952",
    "metadata": {},
    "outputs": [],
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 146,
    "id": "1f2367bf-fbaa-447f-986d-d64550579e07",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
        "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 147,
    "id": "f24423d1-976a-4091-8088-97fe79596225",
    "metadata": {},
    "outputs": [],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 148,
    "id": "aa47681d-09d6-4765-bb38-0f463e504385",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 149,
    "id": "4b002f92-fce9-4fdd-afda-ce9ee98472db",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 150,
    "id": "5636c181-9c45-418f-8f18-c26b8b49a1cd",
    "metadata": {},
    "outputs": [],
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 151,
    "id": "74cd3584-e8d8-4b22-90f4-fcddb40f0f86",
    "metadata": {},
    "outputs": [],
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 152,
    "id": "cfd13dd6-7cec-4193-9e5b-b61c2f91391b",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
        "Name: cast, dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 153,
    "id": "21ffbd38-7766-41c5-b077-a95564254299",
    "metadata": {},
    "outputs": [],
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 154,
    "id": "04a0445a-5d36-44c7-9b39-083da01088b2",
    "metadata": {},
    "outputs": [],
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 155,
    "id": "15fe789a-bfb0-4287-b5ba-a7e639a43ee6",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "Name: crew, dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 156,
    "id": "5d7a902e-6bca-488a-925f-678a0ab6b8f3",
    "metadata": {},
    "outputs": [
@@ -816,7 +816,7 @@
        "4    [Taylor Kitsch, Lynn Collins, Samantha Morton]  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 157,
    "id": "3d62667f-0b16-435e-89f9-9483a8e6324d",
    "metadata": {},
    "outputs": [],
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 158,
    "id": "f129dbdb-8f7a-496b-a958-bce049e203e7",
    "metadata": {},
    "outputs": [],
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 159,
    "id": "e43a4a79-ba0a-454e-978d-5ab58fed2774",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
        "1     [JohnnyDepp, OrlandoBloom, KeiraKnightley]  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 160,
    "id": "a37aeb77-d374-4574-8cf0-2fbc2a88b51b",
    "metadata": {},
    "outputs": [],
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 161,
    "id": "d5597df7-96ee-45bc-a099-722191ca43d9",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1091,7 @@
        "4  [John, Carter, is, a, war-weary,, former, mili...  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 162,
    "id": "8816c339-39ad-4b22-a804-c9529ee1adca",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 163,
    "id": "1c5c8c0e-bd1a-4d6f-93c3-28885636c92b",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 164,
    "id": "d722f6b6-c32c-4e7a-a3e2-8e0a83d3b5de",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1181,7 @@
        "0     19995  Avatar  In the 22nd century, a paraplegic Marine is di..."
       ]
      },
-     "execution_count": 76,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 165,
    "id": "b0401a7e-05b2-4ec8-acdb-60a11a1dd436",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1202,7 @@
        "'In the 22nd century, a paraplegic Marine is dispatched to the moon Pandora on a unique mission, but becomes torn between following orders and protecting an alien civilization. Action Adventure Fantasy ScienceFiction cultureclash future spacewar spacecolony society spacetravel futuristic romance space alien tribe alienplanet cgi marine soldier battle loveaffair antiwar powerrelations mindandsoul 3d SamWorthington ZoeSaldana SigourneyWeaver JamesCameron'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 166,
    "id": "c440f97e-e266-41a9-affb-abc0266a50b1",
    "metadata": {},
    "outputs": [
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 167,
    "id": "cef43ac4-ed10-48c9-8cd4-25935f1836d1",
    "metadata": {},
    "outputs": [
@@ -1293,7 +1293,7 @@
        "1  captain barbossa, long believed to be dead, ha...  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 168,
    "id": "13d28e39-200f-44b3-88bb-f7225a1d2989",
    "metadata": {},
    "outputs": [
@@ -1312,20 +1312,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting nltk\n",
-      "  Downloading nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: nltk in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.9.1)\n",
       "Requirement already satisfied: click in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk) (8.1.8)\n",
       "Requirement already satisfied: joblib in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk) (1.4.2)\n",
       "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk) (2024.11.6)\n",
       "Requirement already satisfied: tqdm in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk) (4.67.1)\n",
-      "Requirement already satisfied: colorama in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from click->nltk) (0.4.6)\n",
-      "Downloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
-      "   ---------------------------------------- 0.0/1.5 MB ? eta -:--:--\n",
-      "   -------------------- ------------------- 0.8/1.5 MB 8.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 1.3/1.5 MB 5.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.5/1.5 MB 3.2 MB/s eta 0:00:00\n",
-      "Installing collected packages: nltk\n",
-      "Successfully installed nltk-3.9.1\n"
+      "Requirement already satisfied: colorama in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from click->nltk) (0.4.6)\n"
      ]
     },
     {
@@ -1347,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 169,
    "id": "793aa85f-4d28-4c94-9b0a-84bea0abab09",
    "metadata": {},
    "outputs": [],
@@ -1357,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 170,
    "id": "5acde918-ef44-42d3-8808-d0370f492ad2",
    "metadata": {},
    "outputs": [],
@@ -1368,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 171,
    "id": "d08a203d-9867-4d46-a984-a256a5d0b1ad",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 172,
    "id": "90b2bb6f-e1b2-43f1-afd2-a254ccf29428",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 173,
    "id": "a1804e12-2167-48c2-9205-25e94f2a4b33",
    "metadata": {},
    "outputs": [],
@@ -1416,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 174,
    "id": "2ccf4e5d-ae8b-4fd4-95f2-76c053a261bf",
    "metadata": {},
    "outputs": [],
@@ -1426,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 175,
    "id": "02876569-504c-434d-9d06-78b069aa53e7",
    "metadata": {},
    "outputs": [
@@ -1442,7 +1434,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 176,
    "id": "58b517ba-5bbc-46ef-8889-d4362783cdaa",
    "metadata": {},
    "outputs": [],
@@ -1463,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 177,
    "id": "94ea5570-571e-468c-a763-e0583bb77151",
    "metadata": {},
    "outputs": [],
@@ -1473,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 178,
    "id": "c5d01564-7ddb-4bdf-bd32-53b4df9bdacd",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1487,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 179,
    "id": "7233d01e-83b7-4984-9616-d7571060440d",
    "metadata": {},
    "outputs": [],
@@ -1521,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 180,
    "id": "18cdf972-d53c-4875-951e-5d25b324ccb0",
    "metadata": {},
    "outputs": [
@@ -1543,8 +1535,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "id": "7a559c5b-bc47-4cfb-b3f3-222fb3da9927",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "6a37bfb1-e20e-46d8-8599-6b7a1d2608f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(new_df,open('movies.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "964cd36c-5c9b-46bf-a24d-e71a862151f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(similarity,open('similarity.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d49b999-4cd1-43ae-b4c7-fddc1d67dd23",
    "metadata": {},
    "outputs": [],
    "source": []
